--- a/xamarinProject/xamarinProject/xamarinProject/maps.xaml
+++ b/xamarinProject/xamarinProject/xamarinProject/maps.xaml
@@ -2,10 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="xamarinProject.maps">
-    <ContentPage.Content>
-        <StackLayout>
-
-            <maps:Map IsShowingUser="True"/>
-        </StackLayout>
-    </ContentPage.Content>
+    <StackLayout>
+        <Grid>
+            <maps:Map x:Name="MyMap" IsShowingUser="True" HeightRequest="700">
+                <maps:Map.ItemTemplate>
+                    <DataTemplate>
+                        <maps:Pin Position="{Binding Position}"
+                                      Label="{Binding PlaceName}"/>
+                    </DataTemplate>
+                </maps:Map.ItemTemplate>
+            </maps:Map>
+        </Grid>
+    </StackLayout>
 </ContentPage>
