update to coordinfo

--- a/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
@@ -51,8 +51,8 @@
                         <td width="25%">@item.lat</td>
                         <td width="25%">@item.lon</td>
                         <td width="25%">
-                            <a class="btn btn-primary w-100 mb-3" asp-controller="Expenses" asp-action="Update" asp-route-Id="@item.id">Update</a>
-                            <a class="btn btn-danger w-100" asp-controller="Expenses" asp-action="Delete" asp-route-Id="@item.id">Delete</a>
+                            <a class="btn btn-primary w-100 mb-3" asp-controller="Coordinfo" asp-action="Update" asp-route-Id="@item.id">Update</a>
+                            <a class="btn btn-danger w-100" asp-controller="Coordinfo" asp-action="Delete" asp-route-Id="@item.id">Delete</a>
 
                         </td>
                     </tr>
