--- a/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Create.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Create.cshtml
@@ -14,45 +14,45 @@
             <div class="col-12">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="name"></label>
+                        <label asp-for="Name"></label>
                     </div>
                     <div class="col-4">
-                        <label asp-for="description"></label>
+                        <label asp-for="Description"></label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="name" class="form-control" />
+                        <input asp-for="Name" class="form-control" />
                     </div>
                     <div class="col-4">
-                        <input asp-for="description" class="form-control" />
+                        <input asp-for="Description" class="form-control" />
                     </div>
 
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="type"></label>
+                        <label asp-for="Type"></label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="type" class="form-control" />
+                        <input asp-for="Type" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="lat"></label>
+                        <label asp-for="Lat"></label>
                     </div>
                     <div class="col-4">
-                        <label asp-for="lon"></label>
+                        <label asp-for="Lon"></label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="lat" class="form-control" />
+                        <input asp-for="Lat" class="form-control" />
                     </div>
                     <div class="col-4">
-                        <input asp-for="lon" class="form-control" />
+                        <input asp-for="Lon" class="form-control" />
                     </div>
                 </div>
 
