--- a/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
@@ -44,15 +44,15 @@
             @foreach (var item in Model)
                 { 
                     <tr>
-                        <td width="25%">@item.id</td>
-                        <td width="25%">@item.name</td>
-                        <td width="25%">@item.description</td>
-                        <td width="25%">@item.type</td>
-                        <td width="25%">@item.lat</td>
-                        <td width="25%">@item.lon</td>
+                        <td width="25%">@item.Id</td>
+                        <td width="25%">@item.Name</td>
+                        <td width="25%">@item.Description</td>
+                        <td width="25%">@item.Type</td>
+                        <td width="25%">@item.Lat</td>
+                        <td width="25%">@item.Lon</td>
                         <td width="25%">
-                            <a class="btn btn-primary w-100 mb-3" asp-controller="Coordinfo" asp-action="Update" asp-route-Id="@item.id">Update</a>
-                            <a class="btn btn-danger w-100" asp-controller="Coordinfo" asp-action="Delete" asp-route-Id="@item.id">Delete</a>
+                            <a class="btn btn-primary w-100 mb-3" asp-controller="Coordinfo" asp-action="Update" asp-route-Id="@item.Id">Update</a>
+                            <a class="btn btn-danger w-100" asp-controller="Coordinfo" asp-action="Delete" asp-route-Id="@item.Id">Delete</a>
 
                         </td>
                     </tr>
