--- a/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/update.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/update.cshtml
@@ -9,6 +9,11 @@
 <h1>update</h1>
 
 <form method="POST" asp-action="updateCoordInfo">
+    <input asp-for="Id" hidden></input>
+
+    <p>@Model.Id</p>
+    <p>@Model.Name</p>
+    <p>@Model.Description</p>
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-black-50 pl-3">Add Item</h2>
@@ -17,45 +22,45 @@
             <div class="col-12">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="name"></label>
+                        <label asp-for="Name"></label>
                     </div>
                     <div class="col-4">
-                        <label asp-for="description"></label>
+                        <label asp-for="Description"></label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="name" class="form-control" />
+                        <input asp-for="Name" class="form-control" />
                     </div>
                     <div class="col-4">
-                        <input asp-for="description" class="form-control" />
+                        <input asp-for="Description" class="form-control" />
                     </div>
 
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="type"></label>
+                        <label asp-for="Type"></label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="type" class="form-control" />
+                        <input asp-for="Type" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="lat"></label>
+                        <label asp-for="Lat"></label>
                     </div>
                     <div class="col-4">
-                        <label asp-for="lon"></label>
+                        <label asp-for="Lon"></label>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <input asp-for="lat" class="form-control" />
+                        <input asp-for="Lat" class="form-control" />
                     </div>
                     <div class="col-4">
-                        <input asp-for="lon" class="form-control" />
+                        <input asp-for="Lon" class="form-control" />
                     </div>
                 </div>
 
