--- a/XamarinProjectBackend/XamarinProjectBackend/Views/AboutUs/Index.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/AboutUs/Index.cshtml
@@ -17,16 +17,16 @@
                 <th>
                     Beskrivelse
                 </th>
+                <th>
+                    Muligheder
+                </th>
             </tr>
         </thead>
         <tbody>
-
             <tr>
                 <td width="75%">@Model.aboutUsText</td>
                 <td width="25%">
-                    <a class="btn btn-primary w-100 mb-3" asp-controller="Expenses" asp-action="Update" asp-route-Id="@Model.id">Opdater</a>
-                    <a class="btn btn-danger w-100" asp-controller="Expenses" asp-action="Delete" asp-route-Id="@Model.id">Slet</a>
-
+                    <a class="btn btn-primary w-100 mb-3 mt-4" asp-controller="AboutUs" asp-action="Update" asp-route-Id="@Model.id">Opdater</a>
                 </td>
             </tr>
         </tbody>
