--- a/xamarinProject/xamarinProject/xamarinProject/Historier.xaml
+++ b/xamarinProject/xamarinProject/xamarinProject/Historier.xaml
@@ -5,7 +5,8 @@
     <StackLayout>
         <Image/>
         <Frame BackgroundColor="#0096c1" Padding="24" Margin="10,30,10,30" HeightRequest="700" CornerRadius="10">
-            <StackLayout>
+            <ScrollView>
+            <StackLayout x:Name="historyLayout">
                 <Button Text="Piraterne" CornerRadius="10" HeightRequest="100" BackgroundColor="#515151" TextTransform="None" FontSize="20" TextColor="white"/>
                 <Button Text="Faengslet" CornerRadius="10" HeightRequest="100" BackgroundColor="#515151" TextTransform="None" FontSize="20" TextColor="white"/>
                 <Button Text="Øens Historie" CornerRadius="10" HeightRequest="100" BackgroundColor="#515151" TextTransform="None" FontSize="20" TextColor="white"/>
@@ -13,6 +14,7 @@
 
             </StackLayout>
             <!--<Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>-->
+            </ScrollView>
         </Frame>
         <!--<Label Text="Start developing tomorrow" FontSize="Title" Padding="30,10,30,10"/>
         <Label Text="Start developing tomorrow" FontSize="Title" Padding="30,10,30,10"/>
