--- a/xamarinProject/xamarinProject/xamarinProject/controller/HistoryDesc.xaml
+++ b/xamarinProject/xamarinProject/xamarinProject/controller/HistoryDesc.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="xamarinProject.controller.HistoryDesc">
+             x:Class="xamarinProject.controller.HistoryDesc"
+             Title="Tilbage                                 " >
+
     <ContentPage.Content>
         <StackLayout>
             <Frame BackgroundColor="#0096c1" Padding="24" Margin="10,30,10,30" HeightRequest="700" CornerRadius="10">
