--- a/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
@@ -7,10 +7,10 @@
 
 <div class="container p-3">
     <div class="col-6">
-        <h2 class="text-primary">Expense Items List</h2>
+        <h2 class="text-primary">Liste af koordinater</h2>
     </div>
-    <div class="col-6 text-right">
-        <a class="btn btn-success" asp-controller="CoordInfo" asp-action="Create">Create new Item</a>
+    <div class="col-12 text-right">
+        <a class="btn btn-success" asp-controller="CoordInfo" asp-action="Create">Opret nyt koordinat</a>
         @*<a class="btn btn-success" asp-controller="CoordInfo" asp-action="ImportJsonFile">Importér JSON Fil</a>*@
     </div>
     <br />
