--- a/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
+++ b/XamarinProjectBackend/XamarinProjectBackend/Views/CoordInfo/Index.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="col-12 text-right">
         <a class="btn btn-success" asp-controller="CoordInfo" asp-action="Create">Opret nyt koordinat</a>
-        @*<a class="btn btn-success" asp-controller="CoordInfo" asp-action="ImportJsonFile">Importér JSON Fil</a>*@
+        <a class="btn btn-success" asp-controller="CoordInfo" asp-action="ImportJsonFile">Importér JSON Fil</a>
     </div>
     <br />
     <table class="table table-bordered table-striped" style="width:100%">
@@ -30,10 +30,10 @@
                     Type
                 </th>
                 <th>
-                    Latitude
+                    Longitute
                 </th>
                 <th>
-                    Longitute
+                    Latitude
                 </th>
                 <th>
                     Action
